Creado mediante Colaboratory

--- a/TDA.ipynb
+++ b/TDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TDA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMoaGm1uNp71/DSr7KIQ+1z",
+      "authorship_tag": "ABX9TyNQtjXjoOtIuN9Kl2H7gZG9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "    self.nombre = nombre\r\n",
         "    self.no_habitacion = no_habitacion"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
         "    self.cliente = cliente\r\n",
         "    self.next = next"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,15 +91,15 @@
         "    previous = None\r\n",
         "\r\n",
         "    while current and current.cliente.no_habitacion != no_habitacion:\r\n",
-        "      previous = current\r\n",
-        "      current = current.next\r\n",
+        "       previous = current\r\n",
+        "       current = current.next\r\n",
         "    if previous is None:\r\n",
         "      self.head = current.next\r\n",
         "    elif current:\r\n",
         "      previous.next = current.next\r\n",
         "      current.next = None"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
         "c3 = cliente(\"Josué Armas\", 204)\r\n",
         "c4 = cliente(\"Gladys Olmos\", 302)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
         "lista.insertar(c3)\r\n",
         "lista.insertar(c4)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,12 +138,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m47SgzI_ewFN",
-        "outputId": "e9ed62a8-5032-4dca-eaba-66dff4529e03"
+        "outputId": "bd5b07e1-fde8-4464-db80-ac8132f9f128"
       },
       "source": [
         "lista.imprimir()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
       "source": [
         "lista.eliminar(204)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "source": [
         "lista.imprimir()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,28 +226,28 @@
         "      node = node.next\r\n",
         "      print(node.cliente.nombre, end = \" => \")\r\n",
         "    \r\n",
-        "    def eliminar(self, no_habitacion):\r\n",
-        "      node = self.head\r\n",
-        "      previous = None\r\n",
+        "  def eliminar(self, no_habitacion):\r\n",
+        "    node = self.head\r\n",
+        "    previous = None\r\n",
         "      \r\n",
-        "      while True:\r\n",
-        "        if node.cliente.no_habitacion == no_habitacion:\r\n",
-        "          if previous is not None:\r\n",
-        "            previous.next = node.next\r\n",
-        "          else:\r\n",
-        "            while node.next != self.head:\r\n",
-        "              node = node.next\r\n",
-        "            node.next = self.head.next\r\n",
-        "            self.head = self.head.next\r\n",
-        "          self.size -=1\r\n",
-        "          return True\r\n",
-        "        elif node.next == self.head:\r\n",
-        "          return False\r\n",
+        "    while True:\r\n",
+        "      if node.cliente.no_habitacion == no_habitacion:\r\n",
+        "        if previous is not None:\r\n",
+        "          previous.next = node.next\r\n",
+        "        else:\r\n",
+        "          while node.next != self.head:\r\n",
+        "            node = node.next\r\n",
+        "          node.next = self.head.next\r\n",
+        "          self.head = self.head.next\r\n",
+        "        self.size -=1\r\n",
+        "        return True\r\n",
+        "      elif node.next == self.head:\r\n",
+        "        return False\r\n",
         "\r\n",
-        "        previous = node\r\n",
-        "        node = node.next"
+        "      previous = node\r\n",
+        "      node = node.next"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -262,7 +262,7 @@
         "lista_c.insertar(c3)\r\n",
         "lista_c.insertar(c4)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -272,12 +272,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lvfJ5EBTUvYK",
-        "outputId": "56ccae31-44ca-4782-fdc3-99001cf5ce76"
+        "outputId": "bdb763fb-9d8e-4748-d7b4-4dae7eba6211"
       },
       "source": [
         "lista_c.imprimir()"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,40 +292,52 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 164
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_QJSsYyrfP9l",
-        "outputId": "68ba38ba-e4d4-484f-9e07-ee50fa3b3580"
+        "outputId": "2ba8f35e-cb39-4024-c559-08b6bad4ba75"
       },
       "source": [
         "lista_c.eliminar(101)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-58-29b70a0fe06a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlista_c\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meliminar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m101\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'linked_list_circular' object has no attribute 'eliminar'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d4rmIUw7gLHk"
+        "id": "d4rmIUw7gLHk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "afa93869-da94-4abf-d867-7f52bac7510e"
       },
       "source": [
         "lista_c.imprimir()"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Gladys Olmos => Josué Armas => Marco López => "
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
