Creado mediante Colaboratory

--- a/TDA.ipynb
+++ b/TDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TDA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNQtjXjoOtIuN9Kl2H7gZG9",
+      "authorship_tag": "ABX9TyPqT0SqJUMu1Al+DCiS3Q4W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "    self.nombre = nombre\r\n",
         "    self.no_habitacion = no_habitacion"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
         "    self.cliente = cliente\r\n",
         "    self.next = next"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -247,7 +247,7 @@
         "      previous = node\r\n",
         "      node = node.next"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -360,8 +360,165 @@
         "    self.previous = previous\r\n",
         "    self.next = next"
       ],
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QKWCHfTGZLSq"
+      },
+      "source": [
+        "class linked_list_de:\r\n",
+        "  def __init__(self, head = None):\r\n",
+        "    self.head = head\r\n",
+        "    self.last = head\r\n",
+        "    self.size = 0\r\n",
+        "  \r\n",
+        "  def insertar(self, cliente):\r\n",
+        "    if self.size == 0:\r\n",
+        "      self.head = node_de(cliente=cliente)\r\n",
+        "      self.last = self.head\r\n",
+        "    else:\r\n",
+        "      new_node = node_de(cliente=cliente, next=self.head)\r\n",
+        "      self.head.previous = new_node\r\n",
+        "      self.head = new_node\r\n",
+        "    self.size += 1\r\n",
+        "\r\n",
+        "  def imprimir(self):\r\n",
+        "    if self.head is None:\r\n",
+        "      return\r\n",
+        "    node = self.head\r\n",
+        "    print(node.cliente.nombre, end = \" => \")\r\n",
+        "    while node.next:\r\n",
+        "      node = node.next\r\n",
+        "      print(node.cliente.nombre, end = \" => \")\r\n",
+        "  \r\n",
+        "  def eliminar(self, no_habitacion):\r\n",
+        "    node = self.head\r\n",
+        "    while node is not None:\r\n",
+        "      if node.cliente.no_habitacion == no_habitacion:\r\n",
+        "        if node.previous is not None:\r\n",
+        "          if node.next:\r\n",
+        "            node.previous = node.next\r\n",
+        "            node.next.previous = node.previous\r\n",
+        "          else:\r\n",
+        "            node.previous.next = None\r\n",
+        "            self.last = node.previous\r\n",
+        "        else:\r\n",
+        "          self.head = node.next\r\n",
+        "          node.next.previous = self.head\r\n",
+        "        self.size -= 1\r\n",
+        "        return True\r\n",
+        "      else:\r\n",
+        "        node = node.next\r\n",
+        "    return False"
+      ],
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V-O5wq8Kb2dq"
+      },
+      "source": [
+        "c1 = cliente(\"Estuardo Zapeta\", 101)\r\n",
+        "c2 = cliente(\"Marco López\", 103)\r\n",
+        "c3 = cliente(\"Josué Armas\", 204)\r\n",
+        "c4 = cliente(\"Gladys Olmos\", 302)"
+      ],
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Mxjgf44Tc0t_"
+      },
+      "source": [
+        "lista_de = linked_list_de()\r\n",
+        "lista_de.insertar(c1)\r\n",
+        "lista_de.insertar(c2)\r\n",
+        "lista_de.insertar(c3)\r\n",
+        "lista_de.insertar(c4)"
+      ],
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uH05iusRei-Z",
+        "outputId": "f172c46f-a39f-49d1-e0ef-8acec4cfc7da"
+      },
+      "source": [
+        "lista_de.imprimir()"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Gladys Olmos => Josué Armas => Marco López => Estuardo Zapeta => "
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WOReiaiwmcwB",
+        "outputId": "547d1b33-1fd0-4bdb-e69f-8610d1a2a73b"
+      },
+      "source": [
+        "lista_de.eliminar(103)"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3-wtPPXNogYO",
+        "outputId": "29114c85-2c4a-4a62-faec-a14db22355f4"
+      },
+      "source": [
+        "lista_de.imprimir()"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Gladys Olmos => Josué Armas => Marco López => Estuardo Zapeta => "
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
