--- a/TDA.ipynb
+++ b/TDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TDA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPqT0SqJUMu1Al+DCiS3Q4W",
+      "authorship_tag": "ABX9TyOfvz8qNAeRBEcbu2DnvwDQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "    self.nombre = nombre\r\n",
         "    self.no_habitacion = no_habitacion"
       ],
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
         "    self.cliente = cliente\r\n",
         "    self.next = next"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -247,7 +247,7 @@
         "      previous = node\r\n",
         "      node = node.next"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -360,7 +360,7 @@
         "    self.previous = previous\r\n",
         "    self.next = next"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +414,7 @@
         "        node = node.next\r\n",
         "    return False"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -428,7 +428,7 @@
         "c3 = cliente(\"Josué Armas\", 204)\r\n",
         "c4 = cliente(\"Gladys Olmos\", 302)"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,7 +443,7 @@
         "lista_de.insertar(c3)\r\n",
         "lista_de.insertar(c4)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -453,12 +453,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uH05iusRei-Z",
-        "outputId": "f172c46f-a39f-49d1-e0ef-8acec4cfc7da"
+        "outputId": "5555b4a7-3707-4113-f12c-c1c4a265761a"
       },
       "source": [
         "lista_de.imprimir()"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -476,12 +476,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WOReiaiwmcwB",
-        "outputId": "547d1b33-1fd0-4bdb-e69f-8610d1a2a73b"
+        "outputId": "bf0447a7-2e4d-4ac8-daf7-e618b397719b"
       },
       "source": [
         "lista_de.eliminar(103)"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,7 +493,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 68
+          "execution_count": 74
         }
       ]
     },
@@ -504,12 +504,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3-wtPPXNogYO",
-        "outputId": "29114c85-2c4a-4a62-faec-a14db22355f4"
+        "outputId": "6832aa20-2781-43c8-b73e-abac3ec984d4"
       },
       "source": [
         "lista_de.imprimir()"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,6 +517,192 @@
             "Gladys Olmos => Josué Armas => Marco López => Estuardo Zapeta => "
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JYaKKnDDclzZ"
+      },
+      "source": [
+        "**Pilas**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Pv8h1Q_UcpxZ"
+      },
+      "source": [
+        "class Pila:\r\n",
+        "  def __init__(self):\r\n",
+        "    self.pila = []\r\n",
+        "\r\n",
+        "  def apilar(self, cliente):\r\n",
+        "    self.pila.append(cliente)\r\n",
+        "\r\n",
+        "  def devolver_tamaño(self):\r\n",
+        "    return len(self.pila)\r\n",
+        "\r\n",
+        "  def imprimir(self):\r\n",
+        "    for elemento in self.pila:\r\n",
+        "      print(elemento.nombre, end = \" => \")\r\n",
+        "\r\n",
+        "  def desapilar(self):\r\n",
+        "    if self.pila:\r\n",
+        "      self.pila.pop()"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JS5PnoCKdghM"
+      },
+      "source": [
+        "c1 = cliente(\"Estuardo Zapeta\", 101)\r\n",
+        "c2 = cliente(\"Marco López\", 103)\r\n",
+        "c3 = cliente(\"Josué Armas\", 204)\r\n",
+        "c4 = cliente(\"Gladys Olmos\", 302)"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nsRU3hmUdunn"
+      },
+      "source": [
+        "p = Pila()\r\n",
+        "p.apilar(c1)\r\n",
+        "p.apilar(c2)\r\n",
+        "p.apilar(c3)\r\n",
+        "p.apilar(c4)"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-d0JSso4fc42",
+        "outputId": "b59fa051-d8cc-4060-b005-8022b5268e35"
+      },
+      "source": [
+        "p.devolver_tamaño()"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "64HTtj_tiBHX"
+      },
+      "source": [
+        "**Colas**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u5AJ9Mm6iDPR"
+      },
+      "source": [
+        "class Cola:\r\n",
+        "  def __init__(self):\r\n",
+        "    self.cola = []\r\n",
+        "\r\n",
+        "  def encolar(self, cliente):\r\n",
+        "    self.cola.append(cliente)\r\n",
+        "\r\n",
+        "  def devolver_tamaño(self):\r\n",
+        "    return len(self.cola)\r\n",
+        "\r\n",
+        "  def imprimir(self):\r\n",
+        "    for elemento in self.cola:\r\n",
+        "      print(elemento.nombre, end = \" <= \")\r\n",
+        "\r\n",
+        "  def desencolar(self):\r\n",
+        "    if self.cola:\r\n",
+        "      self.cola.pop(0)"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G7Zu--o2i6M1"
+      },
+      "source": [
+        "c1 = cliente(\"Estuardo Zapeta\", 101)\r\n",
+        "c2 = cliente(\"Marco López\", 103)\r\n",
+        "c3 = cliente(\"Josué Armas\", 204)\r\n",
+        "c4 = cliente(\"Gladys Olmos\", 302)"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mPoORkxLi_eJ"
+      },
+      "source": [
+        "c = Cola()\r\n",
+        "c.encolar(c1)\r\n",
+        "c.encolar(c2)\r\n",
+        "c.encolar(c3)\r\n",
+        "c.encolar(c4)"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qNAcO8S9jFrD",
+        "outputId": "2a63cbeb-2eff-4ec7-f09c-a242f773a730"
+      },
+      "source": [
+        "c.devolver_tamaño()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
         }
       ]
     }
